<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lamp1"
        android:id="@+id/lamp1"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:onClick="onRadioButtonClicked" />

    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lamp2"
        android:id="@+id/lamp2"
        android:layout_below="@+id/lamp1"
        android:layout_alignParentStart="true"
        android:onClick="onRadioButtonClicked" />

    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lamp3"
        android:id="@+id/lamp3"
        android:layout_below="@+id/lamp1"
        android:layout_alignParentEnd="true"
        android:onClick="onRadioButtonClicked" />

    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lamp4"
        android:id="@+id/lamp4"
        android:layout_below="@+id/lamp2"
        android:layout_alignParentStart="true"
        android:onClick="onRadioButtonClicked" />

    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lamp5"
        android:id="@+id/lamp5"
        android:layout_alignTop="@+id/lamp4"
        android:layout_alignStart="@+id/lamp3"
        android:onClick="onRadioButtonClicked" />

    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lamp6"
        android:id="@+id/lamp6"
        android:layout_below="@+id/lamp4"
        android:layout_alignParentStart="true"
        android:onClick="onRadioButtonClicked" />

    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lamp7"
        android:id="@+id/lamp7"
        android:layout_alignTop="@+id/lamp6"
        android:layout_alignEnd="@+id/lamp5"
        android:onClick="onRadioButtonClicked" />

    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lamp8"
        android:id="@+id/lamp8"
        android:layout_below="@+id/lamp6"
        android:layout_alignParentStart="true"
        android:onClick="onRadioButtonClicked" />

    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lamp9"
        android:id="@+id/lamp9"
        android:layout_alignTop="@+id/lamp8"
        android:layout_alignParentEnd="true"
        android:onClick="onRadioButtonClicked" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_send"
        android:id="@+id/buttonSend"
        android:onClick="sendDataButton"
        android:layout_below="@+id/lamp9"
        android:layout_alignEnd="@+id/lamp9" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_read"
        android:id="@+id/button_read"
        android:layout_alignTop="@+id/buttonSend"
        android:layout_alignParentStart="true"
        android:onClick="readDataButton" />

</RelativeLayout>
